--- a/TailwindPlatziTravel/angular.json
+++ b/TailwindPlatziTravel/angular.json
@@ -31,8 +31,11 @@
             ],
             "styles": [
               "src/styles.scss"
+
             ],
-            "scripts": []
+            "scripts": [
+              "tailwind.config.js"
+            ]
           },
           "configurations": {
             "production": {
