--- a/TailwindPlatziTravel/angular.json
+++ b/TailwindPlatziTravel/angular.json
@@ -31,7 +31,6 @@
             ],
             "styles": [
               "src/styles.scss"
-
             ],
             "scripts": [
               "tailwind.config.js"
@@ -100,8 +99,22 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
